fix: 🐛 made username wrap to newline in smaller viewport

--- a/assets/scss/pages/_product.scss
+++ b/assets/scss/pages/_product.scss
@@ -84,6 +84,10 @@ $editor-min-height: 40vh;
   }
 }
 
+.review-card__header-wrap {
+  flex-wrap: wrap;
+}
+
 .review-card__body-content {
   max-height: 1.5rem * 5;
   > *:last-child {
